--- a/gb/17/1/3/n8662558.md
+++ b/gb/17/1/3/n8662558.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/yrwdct367/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/yrwdct367/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/yrwdct367/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/yrwdct367/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/yrwdct367/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/yrwdct367/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/yrwdct367/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/yrwdct367/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/yrwdct367/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/yrwdct367/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/yrwdct367/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/yrwdct367/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/yrwdct367/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/yrwdct367/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/yrwdct367/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>喝咖啡上瘾？9种饮品帮你完美转身</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/11/shutterstock_623533091-600x400.jpg" />
 <h6>咖啡。(Shutterstock)
 </h6>
 <hr>
-<p>让人喝<ahref="https://github.com/yrwdct367/djy/blob/master/gb/tag/%E5%92%96%E5%95%A1.md#1">咖啡</a>上瘾的通常不是咖啡因，而是咖啡的文化地位。咖啡俨然是美国人生活中的一种仪式，人们习惯于在一天之始享受晨间咖啡。虽然适量喝点咖啡不一定是坏事，但过量饮用（摄取400毫克以上咖啡因，约合4至5杯125毫升装咖啡），却可能引起<ahref="https://github.com/yrwdct367/djy/blob/master/gb/16/11/9/n8478170.md#1" target="_blank" rel="noopener noreferrer">肾上腺疲劳</a>，让人感到心绪不宁，乃至出现中毒症状。对<ahref="https://github.com/yrwdct367/djy/blob/master/gb/tag/%E5%92%96%E5%95%A1.md#1">咖啡</a>因敏感或过敏的人尤其如此。</p>
+<p>让人喝<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%92%96%E5%95%A1.md#1">咖啡</a>上瘾的通常不是咖啡因，而是咖啡的文化地位。咖啡俨然是美国人生活中的一种仪式，人们习惯于在一天之始享受晨间咖啡。虽然适量喝点咖啡不一定是坏事，但过量饮用（摄取400毫克以上咖啡因，约合4至5杯125毫升装咖啡），却可能引起<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/16/11/9/n8478170.md#1" target="_blank" rel="noopener noreferrer">肾上腺疲劳</a>，让人感到心绪不宁，乃至出现中毒症状。对<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%92%96%E5%95%A1.md#1">咖啡</a>因敏感或过敏的人尤其如此。</p>
 <p>那么，为什么不考虑换喝对身心只有滋养作用的饮料，来开始新的一天呢？无论热饮还是冷饮，试试下面这些超健康饮品，调整一下你的“早间仪式”吧。</p>
-<h3><strong>1. <ahref="https://github.com/yrwdct367/djy/blob/master/gb/tag/%E6%8A%B9%E8%8C%B6.md#1">抹茶</a></strong></h3>
-<figure id="attachment_6537296" aria-describedby="caption-attachment-6537296" style="width: 512px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2015/12/141117214730985.jpg"><img class="size-full wp-image-6537296" src="https://i.epochtimes.com/assets/uploads/2015/12/141117214730985.jpg" alt="" width="512" b="341" /></a><figcaption id="caption-attachment-6537296" class="wp-caption-text"><ahref="https://github.com/yrwdct367/djy/blob/master/gb/tag/%E6%8A%B9%E8%8C%B6.md#1">抹茶</a>中的绿茶素可提高肝脏中解毒酵素的活性。（Fotolia）</figcaption></figure>
+<h3><strong>1. <ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%8A%B9%E8%8C%B6.md#1">抹茶</a></strong></h3>
+<figure id="attachment_6537296" aria-describedby="caption-attachment-6537296" style="width: 512px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2015/12/141117214730985.jpg"><img class="size-full wp-image-6537296" src="https://i.epochtimes.com/assets/uploads/2015/12/141117214730985.jpg" alt="" width="512" b="341" /></a><figcaption id="caption-attachment-6537296" class="wp-caption-text"><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%8A%B9%E8%8C%B6.md#1">抹茶</a>中的绿茶素可提高肝脏中解毒酵素的活性。（Fotolia）</figcaption></figure>
 <p>抹茶粉是采摘的茶叶经蒸菁后，用石磨低温磨成的细末。它只含有一点点咖啡因，是晨间提神饮料的很棒的选择。抹茶还含有高浓度的抗氧化剂和多酚，可对抗使DNA变性、扰乱细胞运作的自由基。</p>
 <h3><strong>2. 蒲公英和菊苣根茶</strong></h3>
-<p>蒲公英和菊苣根堪称保健界的“绝配”。蒲公英根可净化血液，帮助肝脏和肾脏涤除杂质。（译注：《本草纲目》记载，“蒲公英解食毒，散滞气，清热毒，化食毒，消恶肿、结核、疔肿。”）菊苣有助消化，可净化尿道和肝脏。这种<ahref="https://github.com/yrwdct367/djy/blob/master/gb/tag/%E8%8C%B6%E9%A5%AE.md#1">茶饮</a>看起来像咖啡，味道浓香，又没有咖啡因。</p>
+<p>蒲公英和菊苣根堪称保健界的“绝配”。蒲公英根可净化血液，帮助肝脏和肾脏涤除杂质。（译注：《本草纲目》记载，“蒲公英解食毒，散滞气，清热毒，化食毒，消恶肿、结核、疔肿。”）菊苣有助消化，可净化尿道和肝脏。这种<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%8C%B6%E9%A5%AE.md#1">茶饮</a>看起来像咖啡，味道浓香，又没有咖啡因。</p>
 <h3><strong>3. 净化水加柠檬</strong></h3>
 <p>柠檬加水或许不是世界上最令人兴奋的组合，但这不意味着它没有保健效果。经过滤净化的饮用水加上柠檬，既可为身体补水，又利尿，还有助肝脏排毒。</p>
 <h3><strong>4. 地中海草本咖啡（Teeccino）</strong></h3>
@@ -22,8 +22,8 @@
 <figure id="attachment_11116945" aria-describedby="caption-attachment-11116945" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2017/06/shutterstock_323817737.jpg"><img class="size-large wp-image-11116945" src="https://i.epochtimes.com/assets/uploads/2017/06/shutterstock_323817737-600x400.jpg" alt="新鲜薄荷茶。(Kotkot32/Shutterstock)" width="600" b="400" /></a><figcaption id="caption-attachment-11116945" class="wp-caption-text">新鲜薄荷茶。(Kotkot32/Shutterstock)</figcaption></figure>
 <p>这种无咖啡因饮品可以平顺地帮助身体恢复。薄荷茶堪称天然良药，能缓解胃酸过多和胃灼热。如果你出现感冒症状，喝薄荷茶还有助于祛痰。<br />
 <strong><br />
-6. 鲜榨<ahref="https://github.com/yrwdct367/djy/blob/master/gb/tag/%E6%9E%9C%E8%94%AC%E6%B1%81.md#1">果蔬汁</a></strong></p>
-<p>通过榨汁，你可以将丰富的营养素打入一杯<ahref="https://github.com/yrwdct367/djy/blob/master/gb/tag/%E6%9E%9C%E8%94%AC%E6%B1%81.md#1">果蔬汁</a>，有机水果和蔬菜会让你有个精神焕发的清晨。下面就是晨间果蔬汁的一款：</p>
+6. 鲜榨<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%9E%9C%E8%94%AC%E6%B1%81.md#1">果蔬汁</a></strong></p>
+<p>通过榨汁，你可以将丰富的营养素打入一杯<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%9E%9C%E8%94%AC%E6%B1%81.md#1">果蔬汁</a>，有机水果和蔬菜会让你有个精神焕发的清晨。下面就是晨间果蔬汁的一款：</p>
 <p>1个中等大小的橙子<br />
 1只小苹果<br />
 3个胡萝卜<br />
@@ -54,47 +54,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/16/8/26/n8240986.md#1">自然平衡荷尔蒙的六种方法</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/16/9/13/n8293603.md#1">咖啡因对人体的五个重要影响</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/16/11/11/n8485755.md#1">冥想的诸多健康益处（上）</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/16/12/3/n8556149.md#1">不要吃！5种会毁了牙齿的常见食物</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/16/12/14/n8591151.md#1">“睡醒”比没睡还累？先戒掉五个坏习惯吧！</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/16/12/15/n8595652.md#1">小心咖啡因过量   造成莫名心悸</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/16/12/21/n8613899.md#1">改善心理健康的五个自然方法</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/17/1/2/n8656131.md#1">还咖啡渍杯本色 善用柠檬酸或牙膏</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13603652.md#1">米饭放冰箱后加热食用 不会发胖？</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/26/n8240986.md#1">自然平衡荷尔蒙的六种方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/9/13/n8293603.md#1">咖啡因对人体的五个重要影响</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/11/11/n8485755.md#1">冥想的诸多健康益处（上）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/12/3/n8556149.md#1">不要吃！5种会毁了牙齿的常见食物</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/12/14/n8591151.md#1">“睡醒”比没睡还累？先戒掉五个坏习惯吧！</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/12/15/n8595652.md#1">小心咖啡因过量   造成莫名心悸</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/12/21/n8613899.md#1">改善心理健康的五个自然方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/1/2/n8656131.md#1">还咖啡渍杯本色 善用柠檬酸或牙膏</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689422.md#1">染疫重症风险降41% 医师：多吃蔬菜给你双重防护</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/1/n11293536.md#1" target="_blank">【征文】元正戊：弦高退秦军救郑国后为何拒受重赏</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/15/n11385414.md#1" target="_blank">20年前 澳洲西人为法轮功赴京上访（下）</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/28/n10747812.md#1" target="_blank">东欧剧变第一国 波兰抛弃共产主义之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/6/n11237722.md#1" target="_blank">美国麻州众议院颁发褒奖状 祝贺法轮大法日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/3/n13553506.md#1">【未解之谜】梅辛传之三：希特勒的预言</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/17/n13582748.md#1">【奇事】这一种算命术连皇帝都大为惊奇</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/14/n13576687.md#1">【百年真相】瞒天过海 中共炮制“美军细菌战”</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/1/27/n13533579.md#1">唐朝皇族后裔的教训 德性有亏一夕化虎</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/27/n13607928.md#1">【舞蹈三剑客】台上一分钟，台下十年功！《为神欢舞》制作花絮</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13605772.md#1">【新闻看点】认定铁链女是小花梅 中共撤拐卖文书</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/26/n13607594.md#1">【财商天下】失业潮继续扩大 中共如何稳预期</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13604998.md#1">【更新2.25】乌总统：我们不会放下武器</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13605502.md#1">北京陷窘境 凌晨发表对乌克兰五点立场声明</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13605706.md#1">陈婷宣布取消“张艺谋妻子”微博头衔 引猜测</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/27/n13607917.md#1">家乡遭俄军攻击 瑞莎崩溃怒喊：究竟为了什么</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13604262.md#1">西恩潘“人在乌克兰” 挺进战地拍入侵纪录片</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13605987.md#1">飞往上海开工 香港歌手许靖韵确诊染疫</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13605880.md#1">瑞莎发视频祈求俄乌停战 吴凤发文安慰打气</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13604960.md#1">坚果是抗糖尿病绝佳食物 防高血糖、并发症</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/18/n13586671.md#1">不吃早餐糖尿病风险增40％ 3组早餐养胃强身</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/26/n13607115.md#1">【直播】疫情、疫苗 CDC没告诉你的2件事</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/25/n13605795.md#1">羽绒衣手洗更长寿！5个清洗技巧常保如新</a></li>
-<li><a href="https://github.com/yrwdct367/djy/blob/master/gb/22/2/26/n13606713.md#1">俄乌战火将如何波及美国房地产？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/16/n11943195.md#1">日媒体人评台湾防疫2大功臣 第一名竟非陈时中</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11946346.md#1">【现场视频】听信中共谎言 返京人挤爆机场</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11945722.md#1">【翻墙必看】官媒反常 批赵立坚“下作”？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测中共病毒</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/yrwdct367/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/yrwdct367/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/1/3/n8662558.htm">喝咖啡上瘾？9种饮品帮你完美转身</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/1/3/n8662558.htm">喝咖啡上瘾？9种饮品帮你完美转身</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yrwdct367/djy/blob/master/gb/17/1/3/n8662558.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/yrwdct367/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/yrwdct367/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/yrwdct367/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/yrwdct367/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/yrwdct367/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/17/1/3/n8662558.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
